deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petlog-backend
  namespace: petlog
  labels:
    app: petlog-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petlog-backend
  template:
    metadata:
      labels:
        app: petlog-backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/azratul/pet-log-backend:latest
          ports:
            - containerPort: 3000
