deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petlog-backend
  namespace: petlog
spec:
  selector:
    app: petlog-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
