deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petlog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: petlog.unnerv.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petlog-frontend-service
                port:
                  number: 80
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: petlog-backend-service
                port:
                  number: 80
